# wk-irs

./: pyproject.toml  readme.md  run.sh
src/: tasks.py
wk-irs/: tasks.py
