[tool.poetry]
name = "wk-irs"
version = "0.1.0"
description = ""
authors = ["thanawinboon <pokepat27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
celery = "^5.3.6"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
opentelemetry-distro = "0.38b0"
opentelemetry-exporter-otlp = "1.17.0"
opentelemetry-instrumentation-celery = "0.38b0"
opentelemetry-sdk = "1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
